--- a/css/estiloClubes.css
+++ b/css/estiloClubes.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+h5 {
+    margin-left: 24px;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
@@ -14,7 +18,7 @@ body {
     background-attachment: fixed;
     background-color: #f0f8ff;
     min-height: 100vh;
-    padding: 3%;
+    /*padding: 3%;*/
 }
 
 footer {
